<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".ActivityPractNumeros">

    <TextView
        android:id="@+id/tv_practN_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/tv_num_ingl"
        android:textColor="@color/text_color"
        android:textSize="28dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_practN_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="70dp"
        android:text="@string/tv_numbers"
        android:textColor="@color/text_color"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txt_practicaN_number_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txt_pract_num"
            android:inputType="textPersonName"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/btn_practN_aceptar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="2.5"
            android:onClick="aceptar"
            android:text="@string/btn_pract_colores_aceptar" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_elige_numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/tv_rango_numeros"
        android:textColor="@color/text_color"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_prac_num_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:onClick="charge0"
            android:text="@string/btn_num_0al9" />

        <Button
            android:id="@+id/btn_prac_num_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:onClick="charge10"
            android:text="@string/btn_num_10al19" />

        <Button
            android:id="@+id/btn_prac_num_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:onClick="charge20"
            android:text="@string/btn_num_20al100" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_pracN_generarNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:onClick="generaNum"
        android:text="@string/btn_pract_num_generar_n" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/pract_numeros_button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:src="@drawable/home_button_icon"
            app:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>