<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".ActivityColores">

    <TextView
        android:id="@+id/tv_colores_aprend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/tv_colores_ingl"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img_color"
        android:layout_width="158dp"
        android:layout_height="158dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/img_aprender_color"
        android:theme="@android:style/Widget.ImageWell" />

    <RadioGroup
        android:id="@+id/rg_colores"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp">

        <RadioButton
            android:id="@+id/rb_amarillo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="rbAmar"
            android:text="@string/rb_amarillo"
            android:textColor="@color/text_color" />

        <RadioButton
            android:id="@+id/rb_rojo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="rbRojo"
            android:text="@string/rb_rojo"
            android:textColor="@color/text_color" />

        <RadioButton
            android:id="@+id/rb_azul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="rbAzul"
            android:text="@string/rb_azul"
            android:textColor="@color/text_color" />

        <RadioButton
            android:id="@+id/rb_verde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="rbVerde"
            android:text="@string/rb_verde"
            android:textColor="@color/text_color" />

        <RadioButton
            android:id="@+id/rb_negro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="rbNegro"
            android:text="@string/rb_negro"
            android:textColor="@color/text_color" />
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/apr_colores_fbtn_practica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:onClick="practicarColores"
            android:src="@drawable/icono_flotante_lapiz"
            app:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>