<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_pixel_4_doodle"
    android:gravity="bottom"
    android:hapticFeedbackEnabled="false"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="250dp"
        android:background="#7E000000"
        android:hapticFeedbackEnabled="false"
        android:text="@string/tv_aprendiendo_in"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/main_tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="250dp"
        android:background="#7E000000"
        android:text="@string/main_tv_desc"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#7E000000"
        android:foregroundGravity="bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_principal_colores2"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="objetos"
            android:text="@string/main_btn_objetos" />

        <Button
            android:id="@+id/btn_principal_colores"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="colores"
            android:text="@string/btn_aprender_colores" />

        <Button
            android:id="@+id/btn_principal_numeros"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="numeros"
            android:text="@string/btn_aprender_numeros" />
    </LinearLayout>

</LinearLayout>