<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".PracticaObjetos">

    <ImageView
        android:id="@+id/pract_objetos_imgv"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textColor="@color/text_color"
        android:textSize="22dp"
        android:text="Escribe el nombre del objeto en inglés" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/pract_objetos_object_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/pract_objetos_txthint_name"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/pract_objetos_btn_validar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:onClick="validarObjeto"
            android:layout_weight="2.5"
            android:text="@string/pract_objetos_btn_validar" />
    </LinearLayout>

    <Button
        android:id="@+id/pract_objetos_btn_cambiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cambiarObjeto"
        android:text="@string/pract_objetos_btn_cambiar_objeto"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

</LinearLayout>